[tool.poetry]
name = "poetry-web"
version = "3.10"
description = "poetry-web"
authors = ["Your Name <you@example.com>"]
license = "license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
cowsay = "^6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
